# questforge-agent

./: .gitignore  README.md  portfolio.md
backend/: .env.example  .env.prod.example  .env.prod.gemini.example  .env.prod.openai.example  pyproject.toml  smoke-none.env.example
backend/scripts/: rebuild_chroma_index.py  run_prod_server.py  run_prod_server_gemini.py  run_prod_server_openai.py  run_server.py  smoke_agent_pipeline.py  ws_test_quest.py
backend/src/: app.py
backend/src/agent_connection/: __init__.py  router.py
backend/src/agents/: agent_catalog.py  base.py  orchestrator.py  router.py
backend/src/cache/: response_cache.py
backend/src/llm/: adapter.py  settings.py
backend/src/protocol/: __init__.py  errors.py  messages.py
backend/src/quest_data/: __init__.py  csv_loader.py  repository.py  retrieval.py  schemas.py  vector_context.py  vector_documents.py  vector_retrieval.py  vector_store.py
backend/src/websocket_gateway/: __init__.py  connection.py  gateway.py
backend/tests/: __init__.py  harness.py  test_agent_connection_router.py  test_agent_contracts.py  test_agent_leaf_behaviors.py  test_chroma_index_script.py  test_llm_adapter.py  test_llm_settings.py  test_message_router.py  test_pipeline_edges.py  test_protocol_and_router.py  test_quest_agent_service.py  test_quest_data_repository.py  test_quest_data_retrieval.py  test_quest_data_vector_documents.py  test_quest_data_vector_retrieval.py  test_quest_data_vector_store.py  test_run_server_script.py  test_scenario_harness.py  test_smoke_agent_pipeline_script.py  test_websocket_endpoint.py
(+65 files in other folders)
