[project]
name = "questforge-agent"
version = "0.1.0"
description = "LangGraph-based AI quest generation agent backend."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3,<0.137.0",
    "google-genai>=1.33.0",
    "langgraph>=1.2.2",
    "openai>=1.0.0",
    "pydantic>=2.0,<3.0",
    "uvicorn[standard]>=0.30.0,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "ANN", "UP", "N"]
ignore = ["E501"]
